--- a/Test/Lupus/MainWindow.xaml
+++ b/Test/Lupus/MainWindow.xaml
@@ -10,8 +10,6 @@
         Loaded="Window_Loaded" Closing="Window_Closing" >
     <Window.CommandBindings>
         <CommandBinding Command="{x:Static local:CustomCommands.Rewind}" CanExecute="Rewind_CanExecute" Executed="Rewind_Executed"/>
-        <CommandBinding Command="{x:Static local:CustomCommands.Record}" CanExecute="Record_CanExecute" Executed="Record_Executed"/>
-        <CommandBinding Command="{x:Static local:CustomCommands.Run}" CanExecute="Run_CanExecute" Executed="Run_Executed"/>
     </Window.CommandBindings>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -68,11 +66,11 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <ToggleButton Grid.Column="0" Content="|&lt;" Command="{x:Static local:CustomCommands.Rewind}"/>
-                    <ToggleButton Grid.Column="1" Content="O" Command="{x:Static local:CustomCommands.Record}"/>
-                    <ToggleButton Grid.Column="2" Content="&gt;" Command="{x:Static local:CustomCommands.Run}"/>
+                    <Button Grid.Column="0" Content="|&lt;" Command="{x:Static local:CustomCommands.Rewind}"/>
+                    <ToggleButton Grid.Column="1" Content="O" IsChecked="{Binding TapeMachine.IsRecording}"/>
+                    <ToggleButton Grid.Column="2" Content="&gt;" IsChecked="{Binding TapeMachine.IsRunning}"/>
                 </Grid>
-                <ToggleButton Grid.Row="4" Content="POWER" IsChecked="{Binding TapeMachine.Router.IsPoweredOn}"/>
+                <ToggleButton Grid.Row="4" Content="On / Off" IsChecked="{Binding TapeMachine.Router.IsPoweredOn}"/>
             </Grid>
         </GroupBox>
     </Grid>
