--- a/Test/Lupus/DeviceSelectionDialog.xaml
+++ b/Test/Lupus/DeviceSelectionDialog.xaml
@@ -1,37 +1,55 @@
 ﻿<Window x:Class="Lupus.DeviceSelectionDialog" x:ClassModifier="internal"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lupus"
-        mc:Ignorable="d"
-        Title="Select devices" Height="320" Width="500">
-    <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="MinWidth" Value="90"/>
-            <Setter Property="Margin" Value="2"/>
-        </Style>
-    </Window.Resources>
-    <Window.CommandBindings>
-        <CommandBinding  Command="{x:Static ApplicationCommands.Save}" CanExecute="CloseDialog_CanExecute" Executed="CloseDialog_Executed"/>
-    </Window.CommandBindings>
-    <Grid Background="{x:Static SystemColors.ControlBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <GroupBox Grid.Row="0" Header="MIDI Input Device">
-            <ListView ItemsSource="{Binding RegisteredMidiInputs, Mode=OneWay}" SelectedItem="{Binding SelectedMidiInput}" />
-        </GroupBox>
-        <GridSplitter Grid.Row="1" Height="6" HorizontalAlignment="Stretch"/>
-        <GroupBox Grid.Row="2" Header="ASIO Audio Device">
-            <ListView ItemsSource="{Binding RegisteredDrivers, Mode=OneWay}" SelectedItem="{Binding SelectedDriver}" />
-        </GroupBox>
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Cancel" IsCancel="True"/>
-            <Button Content="OK" IsDefault="True" Command="{x:Static ApplicationCommands.Save}"/>
-        </StackPanel>
-    </Grid>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:local="clr-namespace:Lupus"
+		mc:Ignorable="d"
+		Style="{StaticResource PedalStyle}"
+		Height="320" Width="500">
+	<Window.Resources>
+		<Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}" x:Key="DialogButton">
+			<Setter Property="MinWidth" Value="90"/>
+			<Setter Property="Margin" Value="2"/>
+			<Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+		</Style>
+		<Style TargetType="{x:Type GridSplitter}">
+			<Setter Property="Background" Value="{StaticResource ControlBorder}"/>
+		</Style>
+		<Style TargetType="{x:Type ListViewItem}">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ListViewItem}">
+						<Label Foreground="{StaticResource ForegroundBrush}">
+							<ContentPresenter/>
+						</Label>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+	</Window.Resources>
+	<Window.CommandBindings>
+		<CommandBinding  Command="{x:Static ApplicationCommands.Save}" CanExecute="CloseDialog_CanExecute" Executed="CloseDialog_Executed"/>
+	</Window.CommandBindings>
+	<Border Style="{StaticResource Outermost}">
+		<Grid Background="{StaticResource BackgroundBrush}" Margin="4">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="1*"/>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition Height="1*" />
+				<RowDefinition Height="Auto"/>
+			</Grid.RowDefinitions>
+			<GroupBox Grid.Row="0" Header="MIDI Input Device">
+				<ListView ItemsSource="{Binding RegisteredMidiInputs, Mode=OneWay}" SelectedItem="{Binding SelectedMidiInput}" />
+			</GroupBox>
+			<GridSplitter Grid.Row="1" Height="6" HorizontalAlignment="Stretch"/>
+			<GroupBox Grid.Row="2" Header="ASIO Audio Device">
+				<ListView ItemsSource="{Binding RegisteredDrivers, Mode=OneWay}" SelectedItem="{Binding SelectedDriver}" />
+			</GroupBox>
+			<StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+				<Button Content="Cancel" IsCancel="True" Style="{StaticResource DialogButton}"/>
+				<Button Content="OK" IsDefault="True" Command="{x:Static ApplicationCommands.Save}" Style="{StaticResource DialogButton}"/>
+			</StackPanel>
+		</Grid>
+	</Border>
 </Window>
