--- a/Test/Lupus/MainWindow.xaml
+++ b/Test/Lupus/MainWindow.xaml
@@ -9,6 +9,7 @@
 		mc:Ignorable="d"
 		Height="450" Width="640"
 		Style="{StaticResource PedalStyle}"
+		WindowState="Maximized"
 		Loaded="Window_Loaded" Closing="Window_Closing">
     <Window.Resources>
 
