--- a/Test/Lupus/MainWindow.xaml
+++ b/Test/Lupus/MainWindow.xaml
@@ -109,12 +109,14 @@
             <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding DriverName}" Foreground="{StaticResource Accent2}"/>
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding MidiInputName}" Foreground="{StaticResource Accent2}"/>
-                <Button Grid.Row="0" Grid.Column="2" Content="Settings" Command="{x:Static local:CustomCommands.Configure}"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding RecordingStatus}" Foreground="{StaticResource Accent2}"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding DriverName}" Foreground="{StaticResource Accent2}"/>
+                <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding MidiInputName}" Foreground="{StaticResource Accent2}"/>
+                <Button Grid.Row="0" Grid.Column="3" Content="Settings" Command="{x:Static local:CustomCommands.Configure}"/>
             </Grid>
 		</Grid>
 	</Border>
